# MicroHapulator

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cibuild.yml
aux/: demo.ipynb  fix-readme.py
aux/global10k_2019-04-15/: README  gen-sim-params.py  global-sim-cmds-1.txt  global-sim-cmds-2.txt  global-sim-cmds-3.txt  global-sim-cmds-4.txt
aux/usa8k_2019-04-15/: README  bigger-panel.tsv  driver.py  gen-sim-params.py  gen_sim_params.py  sim-cmds-1.txt  sim-cmds-2.txt  sim-cmds-3.txt  sim-cmds-4.txt
aux/usa8k_2019-05-28/: .gitignore  README  Snakefile  contrib-runner.py  driver.py  gen_sim_params.py  runner.py  sample-contrib.tsv  sample-seq.tsv  sample-unite.tsv  seq-runner.py  simparams.py  type-runner.py  unite-runner.py
binder/: .gitignore  README.md  demo-api.ipynb  demo-cli.ipynb  demo-sim.ipynb  demo.html  demo.ipynb  environment.yml  frequencies.tsv  marker-defn-new.tsv  panel.txt  refr-seqs.fasta
docs/: CONDUCT.md  DEVEL.md  api.md  cli.md  conf.py  config.md  devel.md  index.md  install.md  manual.md  primer.md  typing.md
microhapulator/: Snakefile  __init__.py  __main__.py  _version.py  api.py  balance.py  cli.py  contain.py  context.py  contrib.py  details.py  diff.py  dist.py  filter.py  genotype.py  getrefr.py  load.py  locus.py  mapstats.py  marker.py  mix.py  mixture.py  panel.py  parsers.py  pipeaux.py  population.py  preproc.smk  prob.py  profile-schema.json  profile.py  qcsummary.py  refr.py  reporter.py  seq.py  sim.py  test_suite.py  thresholds.py  type.py  typestats.py  unite.py  (+1 more)
microhapulator/cli/: __init__.py  balance.py  contain.py  contrib.py  convert.py  diff.py  dist.py  filter.py  getrefr.py  hetbalance.py  locbalance.py  mappingqc.py  mix.py  mixture.py  offtarget.py  pipe.py  prob.py  refr.py  repetitive.py  seq.py  sim.py  type.py  unite.py
microhapulator/data/: .gitignore  alpha.bed  alpha.fasta  alpha.fastq  beta.fastq  bogus-refr.fa.fai  gamma-relaxed.fastq  gamma-strict.fastq  genotype-schema.json  marker_details_template.html  paired.html  panel-alpha-legacy.txt  panel-beta-legacy.txt  profile-schema.json  single.html  template.html  usa-demographics.tsv
microhapulator/happer/: __init__.py  __main__.py  allele.py  mutablestring.py  mutate.py  seqio.py
microhapulator/op/: __init__.py  balance.py  contain.py  contrib.py  diff.py  dist.py  prob.py  seq.py  sim.py  type.py
microhapulator/pipe/: __init__.py  filter.py  mapstats.py  qcstats.py  qcsummary.py  reporter.py  typestats.py
microhapulator/tests/: __init__.py  test_balance.py  test_cli.py  test_contain.py  test_contrib.py  test_convert.py  test_diff.py  (+23 more)
notebook/: hybcap_analysis-Copy1.ipynb  hybcap_analysis.ipynb  hybcap_repeat_analysis-Copy1.ipynb  hybcap_repeat_analysis.ipynb
(+284 files in other folders)
